; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_mbedtls_ssl_check_cert_usage.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_mbedtls_ssl_check_cert_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@MBEDTLS_OID_CLIENT_AUTH = common dso_local global i8* null, align 8
@MBEDTLS_OID_SERVER_AUTH = common dso_local global i8* null, align 8
@MBEDTLS_SSL_IS_SERVER = common dso_local global i32 0, align 4
@MBEDTLS_X509_BADCERT_EXT_KEY_USAGE = common dso_local global i32 0, align 4
@MBEDTLS_X509_BADCERT_KEY_USAGE = common dso_local global i32 0, align 4
@MBEDTLS_X509_KU_DIGITAL_SIGNATURE = common dso_local global i32 0, align 4
@MBEDTLS_X509_KU_KEY_AGREEMENT = common dso_local global i32 0, align 4
@MBEDTLS_X509_KU_KEY_ENCIPHERMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ssl_check_cert_usage(i32* %0, %struct.TYPE_3__* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32*, i32** %8, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = load i32, i32* %9, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
